# Low_Level_Feature_Extraction

./: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  Dockerfile.minio  Low_Level_Feature_Extraction_PRD.md  README.md  TEST_IMAGE_FACTORY.md  config.dev.json  docker-compose.yml  generate_test_image.py  package-lock.json  prometheus.yml  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  run_tests.py  sample_design_webp.py  sample_response.json
app/: config.py  frontend_utils.py  main.py
debug/: image_result.json  mixed_case_result.json  numbers_result.json  simple_text_result.json  special_chars_result.json  test_results.txt
examples/: image_processing_demo.py  performance_monitoring_demo.py
logs/: performance_metrics.json
scripts/: add_tesseract_path.ps1  load_tests.py  performance_tests.py  task-complexity-report.json
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json  tasks.json.bak
test_images/: invalid.txt
tests/: INTEGRATION_TEST_PATTERNS.md  check_image.py  conftest.py  constants.py  generate_test_images.py  performance_test_image_processor.py  test_cache.py  test_cases.py  test_cdn_config.py  test_color_extraction.py  test_config_manager.py  test_configuration.py  test_cv2_imwrite.py  test_font_detector.py  test_font_endpoint.py  test_frontend_utils.py  test_image_processor.py  test_image_transformer.py  test_image_validator.py  test_main.py  test_performance_monitor.py  test_project_setup.py  (+6 more)
(+318 files in other folders)
